--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -3,10 +3,10 @@ WORKDIR /build
 
 COPY package.json package.json
 COPY package-lock.json package-lock.json
-RUN npm ci
+RUN npm install
 
 COPY public/ public
 COPY src/ src
 COPY assets/ assets
-RUN npm start
+CMD npm start
 
