--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "multi-range-slider-react": "^2.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "^2.1.3",
-    "react-simple-maps": "^2.0.0"
+    "react-simple-maps": "^2.0.0",
+    "react-slider": "^2.0.5"
   },
   "browserslist": {
     "production": [
