--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^2.1.3",
     "react-simple-maps": "^2.0.0",
-    "react-slider": "^2.0.5"
+    "react-slider": "^2.0.5",
+    "recharts": "^2.6.2"
   },
   "browserslist": {
     "production": [
