--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-scripts": "^2.1.3",
     "react-simple-maps": "^2.0.0",
     "react-slider": "^2.0.5",
+    "react-toggle": "^4.1.3",
+    "react-toggle-button": "^2.2.0",
     "recharts": "^2.6.2"
   },
   "browserslist": {
