--- a/Dockerfile_prod
+++ b/Dockerfile_prod
@@ -10,6 +10,5 @@ COPY src/ src
 COPY assets/ assets
 RUN npm run build
 
-FROM httpd:alpine
-WORKDIR /var/www/html
-COPY --from=build /build/build/ .
+FROM nginx:alpine
+COPY --from=build /build/build/ /usr/share/nginx/html
