--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -4,8 +4,6 @@
 name: Node.js CI
 
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
     types: [opened, reopened, synchronize]
     branches: [ "main" ]
@@ -17,7 +15,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v3
       with:
         node-version: '16.13.1'
@@ -25,3 +23,4 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+
