--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -74,10 +74,38 @@ jobs:
                 push: true
                 tags: tarofrontendtestcontainerregistry.azurecr.io/taro:frontend
   
+    deploy-frontend:
+        name: 'Deploy Frontend'
+        runs-on: ubuntu-latest
+        needs: [tf-setup, build-frontend]
+        environment: testing
+        env:
+            ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+            ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+            ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+            ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+            - name: 'Terraform Setup'
+              uses: hashicorp/setup-terraform@v1
+              with:
+                terraform_wrapper: false
+            - name: 'Initialize Terraform'
+              working-directory: ./terraform/deploy
+              run: terraform init
+            - name: 'Make plan'
+              working-directory: ./terraform/deploy
+              run: terraform plan -var "image_registry_credential_user=$ARM_CLIENT_ID" -var "image_registry_credential_password=$ARM_CLIENT_SECRET" -out 'test-deploy.tfplan'
+            - name: 'Apply plan'
+              working-directory: ./terraform/deploy
+              run: terraform apply test-deploy.tfplan
+
     tf-destroy:
         name: 'Destroy test environment'
         if: ${{ always() }}
-        needs: [tf-setup, build-frontend]
+        needs: [tf-setup, build-frontend, deploy-frontend]
         runs-on: ubuntu-latest
         environment: testing
         env:
