--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -40,7 +40,7 @@ jobs:
               with:
                 file: ./testing.Dockerfile
                 push: true
-                tags: $ACR_TAG
+                tags: '${{ env.ACR_TAG }}'
   
     deploy-frontend:
         name: 'Deploy Frontend'
