--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -46,7 +46,7 @@ jobs:
               with:
                 file: ./testing.Dockerfile
                 push: true
-                tags: '${{ env.ACR_TAG }}'
+                tags: 'tarostagingregistry.azurecr.io/taro:frontend'
 
   
     deploy-frontend:
@@ -73,7 +73,7 @@ jobs:
               run: terraform init
             - name: 'Make plan'
               working-directory: ./terraform/deploy
-              run: terraform plan -var "acr_name=$TAG" -var "image_registry_credential_user=$ARM_CLIENT_ID" -var "image_registry_credential_password=$ARM_CLIENT_SECRET" -out 'test-deploy.tfplan'
+              run: terraform plan -var "acr_name=tarostagingregistry.azurecr.io/taro:frontend" -var "image_registry_credential_user=$ARM_CLIENT_ID" -var "image_registry_credential_password=$ARM_CLIENT_SECRET" -out 'test-deploy.tfplan'
             - name: 'Apply plan'
               working-directory: ./terraform/deploy
               run: terraform apply test-deploy.tfplan
