--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -36,7 +36,7 @@ jobs:
               with:
                 creds: ${{ secrets.AZURE_SP_CREDENTIALS }}
             - name: 'Loggin to Azure Container Registry'
-              run: az acr login --name $ACR_LOGIN
+              run: az acr login --name tarostagingregistry.azurecr.io
             - name: Set up QEMU
               uses: docker/setup-qemu-action@v1
             - name: Set up Docker Buildx
