--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -22,6 +22,7 @@ jobs:
     build-frontend:
         name: 'Build Frontend'
         runs-on: ubuntu-latest
+        environment: staging
         env:
             ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
             ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -55,7 +56,7 @@ jobs:
         name: 'Deploy Frontend'
         runs-on: ubuntu-latest
         needs: [build-frontend]
-        environment: testing
+        environment: staging
         env:
             ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
             ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -72,7 +73,7 @@ jobs:
                 terraform_wrapper: false
             - name: 'Initialize Terraform'
               working-directory: ./terraform/deploy
-              run: terraform init -backend-config='./config.staging.tfbackend'
+              run: terraform init 
             - name: 'Make plan'
               working-directory: ./terraform/deploy
               run: terraform plan -var "instance_name=staging-frontend" -var "environment=stagging" -var "resource_group_name=taro-staging" -var "acr_name=tarostagingregistry" -var "image_registry_credential_user=$ARM_CLIENT_ID" -var "image_registry_credential_password=$ARM_CLIENT_SECRET" -out 'test-deploy.tfplan'
