--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -63,10 +63,12 @@ jobs:
             ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
             ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
             ACR_TAG: ${{ github.event.client_payload.acr-login }}/taro:frontend
-            TF_VAR_github_token: ${{ secrets.PAT }}
+            TF_VAR_github_token: ${{ secrets.PAT_RAW }}
         steps:
             - name: Checkout
               uses: actions/checkout@v3
+              with:
+                persist-credentials: true
             - name: 'Terraform Setup'
               uses: hashicorp/setup-terraform@v1
               with:
