--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -69,6 +69,9 @@ jobs:
               uses: actions/checkout@v3
               with:
                 persist-credentials: true
+            - uses: fusion-engineering/setup-git-credentials@v2
+              with:
+                credentials: https://kafkaese:${{ secrets.PAT_RAW }}@github.com
             - name: 'Terraform Setup'
               uses: hashicorp/setup-terraform@v1
               with:
