--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -77,11 +77,11 @@ jobs:
               with:
                 terraform_wrapper: false
             - name: 'Initialize Terraform'
-              working-directory: ./terraform/deploy
+              working-directory: ./terraform/staging
               run: terraform init 
             - name: 'Make plan'
-              working-directory: ./terraform/deploy
+              working-directory: ./terraform/staging
               run: terraform plan -var "instance_name=staging-frontend" -var "environment=stagging" -var "image_registry_credential_user=$ARM_CLIENT_ID" -var "image_registry_credential_password=$ARM_CLIENT_SECRET" -out 'test-deploy.tfplan'
             - name: 'Apply plan'
-              working-directory: ./terraform/deploy
+              working-directory: ./terraform/staging
               run: terraform apply test-deploy.tfplan
