upload frontend url as artifact

--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -86,3 +86,10 @@ jobs:
             - name: 'Apply plan'
               working-directory: ./terraform/staging
               run: terraform apply test-deploy.tfplan
+            - name: 'Get ip and port from outputs'
+              run: echo "$(tf output -raw public-ip):$(tf output -raw port)" > url.txt
+            - name: 'Upload url artifact'
+              uses: actions/upload-artifact@v3
+              with:
+                name: frontend-url
+                path: url.txt
