only add public ip to artifact

--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -87,7 +87,7 @@ jobs:
               working-directory: ./terraform/staging
               run: terraform apply test-deploy.tfplan
             - name: 'Get ip and port from outputs'
-              run: echo "$(tf output -raw public-ip):$(tf output -raw port)" > url.txt
+              run: echo "$(tf output -raw public-ip)" > url.txt
             - name: 'Upload url artifact'
               uses: actions/upload-artifact@v3
               with:
