--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -54,17 +54,22 @@ jobs:
           uses: hashicorp/setup-terraform@v1
           with:
             terraform_wrapper: false
+        - name: 'check dir'
+          working-directory: ./terraform/testing
+          run: |
+            pwd
+            ls
         - name: 'Initialize Terraform'
-          working-directory: ./terraform
+          working-directory: ./terraform/testing
           run: terraform init
         - name: 'Get state'
-          working-directory: ./terraform
+          working-directory: ./terraform/testing
           run: terraform plan -refresh-only
         - name: 'Make plan'
-          working-directory: ./terraform
+          working-directory: ./terraform/testing
           run: terraform plan -out test.tfplan
         - name: 'Apply plan'
-          working-directory: ./terraform
+          working-directory: ./terraform/testing
           run: terraform apply test.tfplan
 
     build-frontend:
