fix path for deploy terraform config

--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -119,13 +119,13 @@ jobs:
               with:
                 terraform_wrapper: false
             - name: 'Initialize Terraform'
-              working-directory: ./terraform/deploy
+              working-directory: ./terraform/testing/deploy
               run: terraform init
             - name: 'Make plan'
-              working-directory: ./terraform/deploy
+              working-directory: ./terraform/testing/deploy
               run: terraform plan -var "image_registry_credential_user=$ARM_CLIENT_ID" -var "image_registry_credential_password=$ARM_CLIENT_SECRET" -out 'test-deploy.tfplan'
             - name: 'Apply plan'
-              working-directory: ./terraform/deploy
+              working-directory: ./terraform/testing/deploy
               run: terraform apply test-deploy.tfplan
 
     tf-destroy:
