--- a/Dockerfile_prod
+++ b/Dockerfile_prod
@@ -12,3 +12,19 @@ RUN npm run build
 
 FROM nginx:alpine
 COPY --from=build /build/build/ /usr/share/nginx/html
+
+# Workdir ngnix 
+WORKDIR /usr/share/nginx/html
+
+# Copy env bash script
+COPY ./env.sh .
+COPY ./.env_prod ./.env
+
+# Add bash
+RUN apk add --no-cache bash
+
+# Make our shell script executable
+RUN chmod +x env.sh
+
+# Start Nginx server
+CMD ["/bin/bash", "-c", "/usr/share/nginx/html/env.sh && nginx -g \"daemon off;\""]
