--- a/default.conf
+++ b/default.conf
@@ -3,6 +3,12 @@ server {
     server_name  arms-tracker.app www.arms-tracker.app;
 
     #access_log  /var/log/nginx/host.access.log  main;
+    
+    set $ssl_cert_path /etc/letsencrypt/live/arms-tracker.app/fullchain.pem;
+    set $ssl_key_path /etc/letsencrypt/live/arms-tracker.app/privkey.pem;
+
+    ssl_certificate $ssl_cert_path;
+    ssl_certificate_key $ssl_key_path;
 
     location / {
         root   /usr/share/nginx/html;
