--- a/Dockerfile_prod
+++ b/Dockerfile_prod
@@ -1,3 +1,4 @@
+# Build stage
 FROM node:latest AS build
 WORKDIR /build
 
@@ -10,9 +11,11 @@ COPY src/ src
 COPY assets/ assets
 RUN npm run build
 
+# Server stage
 FROM nginx:alpine
 COPY --from=build /build/build/ /usr/share/nginx/html
 
+# Configuration file for nginx
 COPY default.conf /etc/nginx/conf.d
 
 # Workdir ngnix 
@@ -30,8 +33,6 @@ RUN chmod +x env.sh
 
 # Install certbot
 RUN apk add certbot certbot-nginx
-
-# Mount /etc/letsencrypt/live/arms-tracker.app
 
 # Start Nginx server
 CMD ["/bin/bash", "-c", "/usr/share/nginx/html/env.sh && nginx -g \"daemon off;\""]
