feat: add ssl server to nginx config

--- a/default.conf
+++ b/default.conf
@@ -3,12 +3,6 @@ server {
     server_name  arms-tracker.app www.arms-tracker.app;
 
     #access_log  /var/log/nginx/host.access.log  main;
-    
-    set $ssl_cert_path /etc/letsencrypt/live/arms-tracker.app/fullchain.pem;
-    set $ssl_key_path /etc/letsencrypt/live/arms-tracker.app/privkey.pem;
-
-    ssl_certificate $ssl_cert_path;
-    ssl_certificate_key $ssl_key_path;
 
     location / {
         root   /usr/share/nginx/html;
@@ -47,3 +41,25 @@ server {
     #    deny  all;
     #}
 }
+server {
+    listen 443 ssl;
+    server_name  arms-tracker.app www.arms-tracker.app;
+
+    set $ssl_cert_path /etc/letsencrypt/live/arms-tracker.app/fullchain.pem;
+    set $ssl_key_path /etc/letsencrypt/live/arms-tracker.app/privkey.pem;
+
+    ssl_certificate $ssl_cert_path;
+    ssl_certificate_key $ssl_key_path;
+
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
+    }
+}
+
+
