feat: redirect error logs to mounted file share

--- a/default.conf
+++ b/default.conf
@@ -45,6 +45,8 @@ server {
     listen 443 ssl;
     server_name  arms-tracker.app www.arms-tracker.app;
 
+    error_log /etc/letsencrypt/live/arms-tracker.app/error.log warn;
+
     set $ssl_cert_path /etc/letsencrypt/live/arms-tracker.app/fullchain.pem;
     set $ssl_key_path /etc/letsencrypt/live/arms-tracker.app/privkey.pem;
 
