fix: set path to ssl certificates directly in nginx default config

--- a/default.conf
+++ b/default.conf
@@ -47,11 +47,8 @@ server {
 
     error_log /etc/letsencrypt/live/arms-tracker.app/error.log warn;
 
-    set $ssl_cert_path /etc/letsencrypt/live/arms-tracker.app/fullchain.pem;
-    set $ssl_key_path /etc/letsencrypt/live/arms-tracker.app/privkey.pem;
-
-    ssl_certificate $ssl_cert_path;
-    ssl_certificate_key $ssl_key_path;
+    ssl_certificate /etc/letsencrypt/live/arms-tracker.app/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/arms-tracker.app/privkey.pem;
 
     location / {
         root   /usr/share/nginx/html;
