feat: remove https server from ninx config to allow reverse proxy https instead

--- a/default.conf
+++ b/default.conf
@@ -41,24 +41,26 @@ server {
     #    deny  all;
     #}
 }
-server {
-    listen 443 ssl;
-    server_name  arms-tracker.app www.arms-tracker.app;
 
-    error_log /etc/letsencrypt/live/arms-tracker.app/error.log warn;
+#‚server {
+#‚    listen 443 ssl;
+#‚    server_name  arms-tracker.app www.arms-tracker.app;
 
-    ssl_certificate /etc/letsencrypt/live/arms-tracker.app/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/arms-tracker.app/privkey.pem;
+#‚    error_log /etc/letsencrypt/live/arms-tracker.app/error.log warn;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
+#‚    ssl_certificate /etc/letsencrypt/live/arms-tracker.app/fullchain.pem;
+#‚    ssl_certificate_key /etc/letsencrypt/live/arms-tracker.app/privkey.pem;
 
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
-    }
-}
+ #‚   location / {
+ #‚       root   /usr/share/nginx/html;
+ #‚       index  index.html index.htm;
+ #‚   }
+
+ #‚   error_page   500 502 503 504  /50x.html;
+ #‚   location = /50x.html {
+ #‚       root   /usr/share/nginx/html;
+ #‚   }
+#‚}
+
 
 
